--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,7 +26,10 @@ jobs:
 
       - name: Configure API base URL
         if: ${{ vars.PAGES_API_BASE_URL != '' }}
-        run: echo "window.SBS_API_BASE_URL = '${{ vars.PAGES_API_BASE_URL }}';" > sbs-landing/public/config.js
+        run: |
+          if [ -n "${{ vars.PAGES_API_BASE_URL }}" ]; then
+            printf 'window.SBS_API_BASE_URL = "%s";' "${{ vars.PAGES_API_BASE_URL }}" > sbs-landing/public/config.js
+          fi
 
       - name: Configure Pages
         uses: actions/configure-pages@v5
