--- a/sbs-landing/package.json
+++ b/sbs-landing/package.json
@@ -1,23 +1,54 @@
 {
-  "name": "sbs-landing",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "dependencies": {
-    "axios": "^1.13.2",
-    "body-parser": "^2.2.2",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "express-rate-limit": "^8.2.1",
-    "helmet": "^8.1.0",
-    "multer": "^2.0.2"
-  }
+    "name": "sbs-integration-engine",
+    "version": "1.0.0",
+    "description": "Saudi Billing System (SBS) Integration Engine - Backend API with n8n workflow automation",
+    "main": "server.js",
+    "type": "commonjs",
+    "scripts": {
+          "start": "node server.js",
+          "dev": "nodemon server.js",
+          "test": "node test-submit-claim.js",
+          "build": "echo \"No build required - uses vanilla Node.js\"",
+          "lint": "eslint .",
+          "format": "prettier --write \"**/*.js\""
+    },
+    "keywords": [
+          "sbs",
+          "billing",
+          "nphies",
+          "healthcare",
+          "claim-processing",
+          "n8n",
+          "microservices"
+    ],
+    "author": "Dr. Mohamed El Fadil",
+    "license": "MIT",
+    "dependencies": {
+          "axios": "^1.13.2",
+          "body-parser": "^1.20.2",
+          "cors": "^2.8.5",
+          "dotenv": "^16.3.1",
+          "express": "^4.18.2",
+          "express-rate-limit": "^7.1.5",
+          "helmet": "^7.1.0",
+          "multer": "^1.4.5-lts.1",
+          "uuid": "^9.0.1"
+    },
+    "devDependencies": {
+          "nodemon": "^3.0.2",
+          "eslint": "^8.54.0",
+          "prettier": "^3.1.1"
+    },
+    "engines": {
+          "node": ">=18.0.0",
+          "npm": ">=9.0.0"
+    },
+    "repository": {
+          "type": "git",
+          "url": "https://github.com/Fadil369/sbs.git"
+    },
+    "bugs": {
+          "url": "https://github.com/Fadil369/sbs/issues"
+    },
+    "homepage": "https://github.com/Fadil369/sbs#readme"
 }
