Add GIVC Health React frontend with SBS integration (#62)
* feat: Integrate GIVC Health React frontend with SBS engine

Major integration of GIVC HEALTH (Global Integrated Virtual Care Health)
React application with the existing SBS Integration Engine and OIASES platform.

## Frontend Changes

### New React Application Structure
- Created modern React 18 application using Vite build tool
- Implemented component-based architecture with:
  - Header/Footer components for consistent layout
  - ClinicianTab: AI-powered medical scribe interface
  - CoderTab: Medical coding pipeline visualization
  - ValidatorTab: Denial prevention and appeals management
  - PipelineStep: Visual pipeline status indicator

### Features Implemented
- 🎙️ Ambient audio transcription simulation
- 🧠 AI-powered clinical insights via Gemini API
- 📝 Automated SOAP note generation
- 🔄 Real-time SBS code normalization pipeline
- 💰 FHIR R4 claim building with financial rules
- 🌐 Bilingual support (English/Arabic) with RTL layout
- ⚠️ Predictive denial risk analysis
- 📄 Medical justification generation

### UI/UX
- Modern dark theme with Tailwind CSS
- Responsive design for mobile/tablet/desktop
- Smooth animations and transitions
- Lucide React icons for consistency
- Accessibility features (ARIA labels, keyboard navigation)

## Backend Changes

### API Enhancements
- Added `/api/gemini/generate` endpoint for AI proxy
  - Securely proxies requests to Google Gemini API
  - Hides API keys from frontend
  - Includes retry logic and error handling

### Services Integration
- geminiService.js: Gemini AI integration with retry logic
- apiService.js: Backend API client for claim submission
- middleware.js: SBS code normalization with multi-tier fallback

## Build & Deploy Configuration

### Vite Setup
- vite.config.js: Modern build configuration
- Dev server on port 3001 with API proxy
- Production builds optimized and minified
- Source maps enabled for debugging

### Styling
- Tailwind CSS 3.4+ with custom 

--- a/sbs-landing/Dockerfile
+++ b/sbs-landing/Dockerfile
@@ -1,5 +1,7 @@
-# SBS Landing Page Dockerfile
-FROM node:25-alpine
+# Multi-stage Dockerfile for GIVC Health Frontend + SBS Backend
+
+# Stage 1: Build React frontend
+FROM node:20-alpine AS frontend-builder
 
 WORKDIR /app
 
@@ -7,21 +9,44 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci --only=production
+RUN npm ci
 
-# Copy application files
+# Copy source files
+COPY src ./src
+COPY index.html ./
+COPY vite.config.js ./
+COPY tailwind.config.js ./
+COPY postcss.config.js ./
+
+# Build the React app
+RUN npm run build
+
+# Stage 2: Production backend with built frontend
+FROM node:20-alpine
+
+WORKDIR /app
+
+# Install production dependencies only
+COPY package*.json ./
+RUN npm ci --omit=dev
+
+# Copy backend server
 COPY server.js ./
-COPY public ./public
+COPY test-submit-claim.js ./
+COPY n8n-workflow-sbs-complete.json ./
 
-# Create upload directory
-RUN mkdir -p /tmp/sbs-uploads
+# Copy built frontend from previous stage
+COPY --from=frontend-builder /app/dist ./public
+
+# Create uploads directory
+RUN mkdir -p /tmp/sbs-uploads && chmod 777 /tmp/sbs-uploads
 
 # Expose port
 EXPOSE 3000
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-  CMD node -e "require('http').get('http://localhost:3000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+    CMD node -e "require('http').get('http://localhost:3000/health', (r) => {let b = ''; r.on('data', (c) => b+=c); r.on('end', () => {if (JSON.parse(b).status === 'healthy') process.exit(0); process.exit(1);})})" || exit 1
 
-# Run application
+# Start server
 CMD ["node", "server.js"]
