--- a/sbs-landing/.env.example
+++ b/sbs-landing/.env.example
@@ -1,72 +1,48 @@
-# ============================================================
-# SBS Integration Engine - Environment Configuration
-# ============================================================
-# Copy this file to .env and update with your values
-# DO NOT commit .env file to version control
-# ============================================================
+# Database Configuration
+DB_HOST=postgres
+DB_NAME=sbs_integration
+DB_USER=postgres
+DB_PASSWORD=your_secure_password_here
+DB_PORT=5432
 
-# Server Configuration
-PORT=5000
-NODE_ENV=development
+# Gemini AI Configuration (for GIVC Health Frontend & Normalizer Service)
+GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_MODEL=gemini-2.0-flash-exp
 
-# Frontend CORS Configuration
-# Multiple origins separated by commas
-ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,https://fadil369.github.io
-# Backwards compatibility (deprecated)
-CORS_ORIGIN=http://localhost:3000,http://127.0.0.1:3000,https://fadil369.github.io
+# NPHIES Configuration
+NPHIES_ENV=sandbox
+NPHIES_BASE_URL=https://sandbox.nphies.sa/api/v1
+NPHIES_API_KEY=your_nphies_api_key_here
+NPHIES_TIMEOUT=30
+NPHIES_MAX_RETRIES=3
 
-# File Upload Configuration
-UPLOAD_DIR=/tmp/sbs-uploads
-MAX_FILE_SIZE=10485760
+# Certificate Configuration
+CERT_BASE_PATH=/certs
+CERT_PASSWORD=
 
-# Microservices URLs
-# Normalizer Service - Code translation and standardization
+# n8n Workflow Engine Configuration
+N8N_BASIC_AUTH_USER=admin
+N8N_BASIC_AUTH_PASSWORD=your_secure_n8n_password
+N8N_HOST=localhost
+N8N_WEBHOOK_URL=http://localhost:5678
+N8N_EDITOR_BASE_URL=http://localhost:5678
+TIMEZONE=Asia/Riyadh
+
+# Landing API (sbs-landing)
 SBS_NORMALIZER_URL=http://localhost:8000
-
-# Financial Rules Engine - Business logic and pricing
-SBS_FINANCIAL_RULES_URL=http://localhost:8002
-
-# Signer Service - Digital signatures and encryption
 SBS_SIGNER_URL=http://localhost:8001
-
-# NPHIES Bridge - National Platform integration
+SBS_FINANCIAL_RULES_URL=http://localhost:8002
 SBS_NPHIES_BRIDGE_URL=http://localhost:8003
 
-# Database Configuration (when ready)
-# DB_HOST=localhost
-# DB_PORT=5432
-# DB_NAME=sbs_integration
-# DB_USER=sbs_user
-# DB_PASSWORD=secure_password
+# CORS Configuration (Security Critical)
+# Comma-separated list of allowed frontend domains
+# Example for production: ALLOWED_ORIGINS=https://yourdomain.com,https://api.yourdomain.com
+ALLOWED_ORIGINS=http://localhost:3001,http://localhost:3000
 
-# Logging Configuration
-LOG_LEVEL=debug
-LOG_FORMAT=json
+# API Configuration
+PORT=3000
+NODE_ENV=development
 
-# API Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
-
-# Security
-JWT_SECRET=your-secret-key-change-in-production
-API_KEY=your-api-key-change-in-production
-
-# Email Configuration (optional)
-# SMTP_HOST=smtp.gmail.com
-# SMTP_PORT=587
-# SMTP_USER=your-email@gmail.com
-# SMTP_PASSWORD=your-app-password
-# EMAIL_FROM=noreply@sbs.com
-
-# Feature Flags
-ENABLE_MOCK_PROCESSING=true
-ENABLE_DETAILED_LOGGING=true
-ENABLE_METRICS=true
-ENABLE_STAGE_HOOKS=false
-SBS_STAGE_HOOK_URL=
-
-# ============================================================
-# DEVELOPMENT ONLY - DO NOT USE IN PRODUCTION
-# ============================================================
-DEBUG=sbs:*
-MOCK_API_RESPONSES=false
+# pgAdmin Configuration (Optional)
+PGADMIN_EMAIL=admin@sbs.sa
+PGADMIN_PASSWORD=admin_password
